--- a/src/main/resources/static/styles/home.scss
+++ b/src/main/resources/static/styles/home.scss
@@ -37,7 +37,11 @@
 
   @import 'home/approaches-container';
 
-  @import 'home/sample-container';
+
+  @import 'home/our-story-container';
+
+
+  @import 'home/work-with-us-container';
 
 
   #transition-lighttodark {
@@ -54,6 +58,12 @@
 
 
   @import 'home/ratings';
+
+
+  @import 'home/account-promo-container';
+
+
+  @import 'home/sample-container';
 
 
   @import 'home/menu-start';
