--- a/src/main/resources/static/styles/home/sample-container.scss
+++ b/src/main/resources/static/styles/home/sample-container.scss
@@ -1,7 +1,7 @@
 #sample-container {
   width: 70vw;
   height: 100vh;
-  background: $light;
+  background: $dark;
   z-index: 2;
   display: flex;
   flex-flow: column;
