--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <!--<link rel="icon" type="image/x-icon" href="/images/favicon.ico">-->
+    <link rel="icon" type="image/x-icon" href="/images/condelulogo.ico">
     <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/styles/home.css">
@@ -81,8 +81,78 @@
         </div>
     </div>
 
+    <div id="our-story-container">
+        <h2 class="text-story-anim story-anim">Here's Our Story</h2>
+        <div id="story-text-container">
+            <p class="story-anim">We started small, with one minor location in Houston. But through collaboration with our community, we were able to succeed.
+                We were able to develop a vision for the industry. You see, fast food is renowned for being unhealthy at best and lethal at worst.
+                But we don't believe that it has to be this way.</p>
+            <p class="story-anim">So we set out to develop a fast food chain with a central, guiding goal: to bridge the gap between convenience and health.
+                Our idea was well received, and we were granted the opportunity to expand into more communities, yet we never lost these core principles.</p>
+        </div>
+    </div>
+
+    <div class="seperator-container">
+        <div class="seperator"></div>
+    </div>
+
+    <div id="work-with-us-container">
+        <h2 class="collaborate-text-anim collaborate-tile-anim">We Can Help Each Other</h2>
+        <div id="collaborate-text-container">
+            <p class="collaborate-left collaborate-tile-anim-left">As an important part of building a community with every location, we source our food from local farmers. But to get that food to our restaurants on time, we need a team to transport the goods — not to mention staffing each location for our customers.</p>
+            <p class="collaborate-right collaborate-tile-anim-right">That's where you come in! We hire locally, providing a multitude of flexible jobs with reasonable pay and hours to our communities. Students and adults alike are encouraged to apply and develop entry-level job experience — there's plenty of work to go around.</p>
+        </div>
+        <button class="collaborate-tile-anim">Apply</button>
+    </div>
+
+    <div id="transition-lighttodark">
+        <svg viewbox="0 0 100 100" preserveAspectRatio="none"><path style="stroke:none;fill-opacity:1;" d="M 0,0 L 0,100 L 100,50 L 0,0"/></svg>
+    </div>
+
+    <div id="top-ratings-display" class="dark">
+        <!-- Future: add a system to retrieve recent 5-star reviews and display them. -->
+        <h2 id="ratings-title" class="dark ratings-text-anim">Ratings</h2>
+        <div class="ratings-container">
+            <div class="rating-tile-high dark">
+                <h3 class="dark">Lorem Ipsum</h3>
+                <p class="dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+            <div class="rating-tile-low dark">
+                <h3 class="dark">Lorem Ipsum</h3>
+                <p class="dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+        </div>
+        <div class="ratings-container">
+            <div class="rating-tile-high dark">
+                <h3 class="dark">Lorem Ipsum</h3>
+                <p class="dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+            <div class="rating-tile-low dark">
+                <h3 class="dark">Lorem Ipsum</h3>
+                <p class="dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+        </div>
+        <div class="ratings-container">
+            <div class="rating-tile-high dark">
+                <h3 class="dark">Lorem Ipsum</h3>
+                <p class="dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+            <div class="rating-tile-low dark">
+                <h3 class="dark">Lorem Ipsum</h3>
+                <p class="dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+        </div>
+    </div>
+
+    <div id="account-promo-container">
+        <h2 class="dark text-account-anim account-tile-animate">Make An Account</h2>
+        <p class="dark account-tile-animate">An account allows you to create personalized meal plans, save your favorites, leave reviews, and even earn rewards! It's free. It's easy. You'll thank yourself later.</p>
+        <p class="dark account-tile-animate">We understand you might be weary of corporations selling your data. You don't need to worry about that with us: we don't collect statistics on your usage, and we don't let anyone else see the personal data of <strong class="dark">any</strong> of our customers.</p>
+        <button class="dark account-tile-animate">Create Account</button>
+    </div>
+
     <div id="sample-container">
-        <h1 class="sample-title-anim">How'd You Like A Sample?</h1>
+        <h1 class="sample-title-anim dark">How'd You Like A Sample?</h1>
         <div id="sample-bar-container">
             <div class="sample-bar bar-left">
                 <div class="sample-bar-image-container">
@@ -107,46 +177,6 @@
             </div>
         </div>
     </div>
-
-    <div id="transition-lighttodark">
-        <svg viewbox="0 0 100 100" preserveAspectRatio="none"><path style="stroke:none;fill-opacity:1;" d="M 0,0 L 0,100 L 100,50 L 0,0"/></svg>
-    </div>
-
-    <div id="top-ratings-display" class="dark">
-        <!-- Future: add a system to retrieve recent 5-star reviews and display them. -->
-        <h2 id="ratings-title" class="dark">Ratings</h2>
-        <div class="ratings-container">
-            <div class="rating-tile-high dark">
-                <h3 class="dark">Lorem Ipsum</h3>
-                <p class="dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </div>
-            <div class="rating-tile-low dark">
-                <h3 class="dark">Lorem Ipsum</h3>
-                <p class="dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </div>
-        </div>
-        <div class="ratings-container">
-            <div class="rating-tile-high dark">
-                <h3 class="dark">Lorem Ipsum</h3>
-                <p class="dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </div>
-            <div class="rating-tile-low dark">
-                <h3 class="dark">Lorem Ipsum</h3>
-                <p class="dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </div>
-        </div>
-        <div class="ratings-container">
-            <div class="rating-tile-high dark">
-                <h3 class="dark">Lorem Ipsum</h3>
-                <p class="dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </div>
-            <div class="rating-tile-low dark">
-                <h3 class="dark">Lorem Ipsum</h3>
-                <p class="dark">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </div>
-        </div>
-    </div>
-
 
     <div id="menu-start" class="dark">
         <div id="menu-title-container">
