Some optimization with will-change

--- a/src/main/resources/static/styles/constants.scss
+++ b/src/main/resources/static/styles/constants.scss
@@ -120,6 +120,9 @@ body {
 body {
   overflow-x: hidden;
 }
+span {
+  will-change: transform, opacity;
+}
 
 ::-webkit-scrollbar {
   width: 0.5em;
