--- a/src/main/resources/static/styles/home/work-with-us-container.scss
+++ b/src/main/resources/static/styles/home/work-with-us-container.scss
@@ -43,3 +43,7 @@
   right: -1px;
   top: 20%;
 }
+
+.collaborate-tile-anim, .collaborate-tile-anim-left, .collaborate-tile-anim-right {
+  will-change: transform, opacity;
+}
