--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -180,7 +180,7 @@
 
     <div id="menu-start" class="dark">
         <div id="menu-title-container">
-            <h1 class="dark" id="menu-title">Menu</h1>
+            <h1 class="dark" id="menu-title">What We've Got</h1>
         </div>
     </div>
 </div>
