--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -57,32 +57,32 @@
     <div id="approaches-container">
         <div class="approaches-tile">
             <div class="approaches-tile-title">
-                <h2 class="approaches-title-anim">Lorem Ipsum</h2>
+                <h3 class="approaches-title-anim">Always Healthy</h3>
             </div>
             <div class="approaches-tile-content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>All of our food is delivered in healthy, well-balanced portions. In fact, our entire menu is vegetarian; no meats, processed or otherwise, to be found. We know the stigma of vegetarian food tasting poorly, but don't be concerned; each bite has been designed specifically to maximize both taste and nutrition.</p>
             </div>
         </div>
         <div class="approaches-tile">
             <div class="approaches-tile-title">
-                <h2 class="approaches-title-anim">Lorem Ipsum</h2>
+                <h3 class="approaches-title-anim">Ethics Never Cast Aside</h3>
             </div>
             <div class="approaches-tile-content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>All of this might sound too good to be true - surely we must have made compromises somewhere. But no! Through <a href="/collaborations" class="link-hover">collaborations</a> with our community to source produce, as well as fostering skilled employees with reasonable pays, we have successfully built a team that can produce fresh meals for customers in an ethical manner. We even work with <a href="/sustainability" class="link-hover">environmental organizations</a> to capture all carbon released to the atmosphere - in equal measures!</p>
             </div>
         </div>
         <div class="approaches-tile">
             <div class="approaches-tile-title">
-                <h2 class="approaches-title-anim">Lorem Ipsum</h2>
+                <h3 class="approaches-title-anim">Yet Still Delivered Fast</h3>
             </div>
             <div class="approaches-tile-content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>This focus on quality healthy food hasn't come at the cost of convenience, however. We understand you have busy lives, with no way to cook on the road, or no energy to prepare your own meal at home. That's why we've modeled ourselves off fast food restaurants, yet with no compromise to quality.</p>
             </div>
         </div>
     </div>
 
     <div id="our-story-container">
-        <h2 class="text-story-anim story-anim">Here's Our Story</h2>
+        <h1 class="text-story-anim story-anim">Here's Our Story</h1>
         <div id="story-text-container">
             <p class="story-anim">We started small, with one minor location in Houston. But through collaboration with our community, we were able to succeed.
                 We were able to develop a vision for the industry. You see, fast food is renowned for being unhealthy at best and lethal at worst.
@@ -97,7 +97,7 @@
     </div>
 
     <div id="work-with-us-container">
-        <h2 class="collaborate-text-anim collaborate-tile-anim">We Can Help Each Other</h2>
+        <h1 class="collaborate-text-anim collaborate-tile-anim">We Can Help Each Other</h1>
         <div id="collaborate-text-container">
             <p class="collaborate-left collaborate-tile-anim-left">As an important part of building a community with every location, we source our food from local farmers. But to get that food to our restaurants on time, we need a team to transport the goods — not to mention staffing each location for our customers.</p>
             <p class="collaborate-right collaborate-tile-anim-right">That's where you come in! We hire locally, providing a multitude of flexible jobs with reasonable pay and hours to our communities. Students and adults alike are encouraged to apply and develop entry-level job experience — there's plenty of work to go around.</p>
@@ -111,7 +111,7 @@
 
     <div id="top-ratings-display" class="dark">
         <!-- Future: add a system to retrieve recent 5-star reviews and display them. -->
-        <h2 id="ratings-title" class="dark ratings-text-anim">Ratings</h2>
+        <h1 id="ratings-title" class="dark ratings-text-anim">Ratings</h1>
         <div class="ratings-container">
             <div class="rating-tile-high dark">
                 <h3 class="dark">Lorem Ipsum</h3>
@@ -145,7 +145,7 @@
     </div>
 
     <div id="account-promo-container">
-        <h2 class="dark text-account-anim account-tile-animate">Make An Account</h2>
+        <h1 class="dark text-account-anim account-tile-animate">Make An Account</h1>
         <p class="dark account-tile-animate">An account allows you to create personalized meal plans, save your favorites, leave reviews, and even earn rewards! It's free. It's easy. You'll thank yourself later.</p>
         <p class="dark account-tile-animate">We understand you might be weary of corporations selling your data. You don't need to worry about that with us: we don't collect statistics on your usage, and we don't let anyone else see the personal data of <strong class="dark">any</strong> of our customers.</p>
         <button class="dark account-tile-animate">Create Account</button>
@@ -180,7 +180,7 @@
 
     <div id="menu-start" class="dark">
         <div id="menu-title-container">
-            <h1 class="dark" id="menu-title">What We've Got</h1>
+            <h2 class="dark" id="menu-title">What We've Got</h2>
         </div>
     </div>
 </div>
