Created sign on page.

--- a/src/main/resources/static/styles/constants.scss
+++ b/src/main/resources/static/styles/constants.scss
@@ -162,3 +162,17 @@ a.link-hover::after {
 a.link-hover:hover::after {
   width: 100%;
 }
+
+#site-content {
+  height: 100vh;
+  width: fit-content;
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
+  align-items: center;
+  //padding-left: 27vw;
+  z-index: 1;
+  background: none;
+  transform: scaleY(1.01);
+  will-change: transform;
+}
