--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Condelu Meals</title>
     <link rel="icon" type="image/x-icon" href="/images/condelulogo.ico">
     <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/2b6129ab2e.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/lenis@1.1.13/dist/lenis.css">
-    <script src="/js/animations.js"></script>
+    <script src="/js/home_animations.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
 </head>
@@ -27,7 +27,7 @@
         <a class="dark" href="/">Meal Plans</a>
         <a class="dark" href="/">TSA 1</a>
         <a class="dark" href="/">TSA 2</a>
-        <a class="dark emphasize" href="/">Account</a>
+        <a class="dark emphasize" href="/signon">Account</a>
     </div>
     <div id="header-image-container">
         <svg viewBox="0 0 132.29166 132.29166" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" id="header-svg">
